Disable arm32 __asm for _byte_swap_u16_variable since gcc4.5 produces decent code for it.  Fixes PR/46898.